fix: 处理了成就系统应该在玩家join disconnect世界时候创建销毁而不是整个生命周期跟随系统的问题；checker init 跟随更新一次物品通知